[package]
name = "test_verifier"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zerosync_verifier = { git = "https://github.com/ZeroSync/zerosync-verifier" }
serde_json = "1.0"
reqwest = { version = "0.11.22", features = ["blocking"] }
flate2 = "1.0.28"
tar = "0.4.40"
clap = { version = "4.4.10", features = ["derive"] }
